# bonicpp

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
src/: CMakeLists.txt  argparse.hpp  logging.cpp  main.cpp
src/bonicpp/: CMakeLists.txt  argparse.cpp  exception.hpp  logging.hpp  mdvector.hpp
src/bonicpp/raytracing/: CMakeLists.txt
src/bonicpp/watchdog/: CMakeLists.txt  README.md  events.cpp  events.hpp  main.cpp  observers.cpp  observers.hpp  state.cpp  state.hpp
src/raytracing/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/bonicpp/: test_mdvector.cpp
